# infwordle

./: Cargo.toml  LICENSE  README.md
src/: main.rs  words.rs
