[package]
name = "infwordle"
version = "0.1.0"
edition = "2024"
license-file = "LICENSE" # Don't think I need this cause I'm not adding it to crates.io
keywords = ["wordle","infinite","infwordle","game"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rand = "0.9.1"
clap = { version = "4.5.40", features = ["derive"] }
